Closed
Bug 563285
Opened 15 years ago
Closed 15 years ago
Crash on quit [@ objc_msgSend | __CFRunLoopRun ] related to searchResultsAvailable
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: David, Assigned: alqahira)
References
Details
Attachments
(2 files)
|
14.47 KB,
text/plain
|
Details | |
|
757 bytes,
patch
|
stuart.morgan+bugzilla
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en; rv:1.9.2.5pre) Gecko/20100503 Camino/2.1a1pre (like Firefox/3.6.5pre)
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en; rv:1.9.2.5pre) Gecko/20100503 Camino/2.1a1pre (like Firefox/3.6.5pre)
Crash while quitting. No open tabs/windows.
Reproducible: Always
Steps to Reproduce:
1. Quit Camino
2. Random crash
3. ???
4. Profit!
Actual Results:
Crash was totally random.
Expected Results:
No crash.
| Reporter | ||
Comment 1•15 years ago
|
||
| Reporter | ||
Comment 2•15 years ago
|
||
Erh, not always reproducible, first time i got it.. Overlooked that variable.
| Assignee | ||
Comment 3•15 years ago
|
||
I had David file this for investigation because of the following info in the Apple crash report (yay selector name!):
Application Specific Information:
objc_msgSend() selector name: searchResultsAvailable
Thread 0 Crashed: Dispatch queue: com.apple.main-thread
0 libobjc.A.dylib 0x99649eec objc_msgSend + 44
searchResultsAvailable is related to our autocomplete impl; do we possibly have lifetime issues with it?
Summary: Crash on quit → Crash on quit [@ objc_msgSend | __CFRunLoopRun ] related to searchResultsAvailable
Comment 4•15 years ago
|
||
We sure do; AutoCompleteTextField.mm should be calling cancelSearch in its dealloc. I should have caught that in review :(
| Assignee | ||
Comment 5•15 years ago
|
||
Like so?
Attachment #444289 -
Flags: superreview?(stuart.morgan+bugzilla)
| Assignee | ||
Updated•15 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 6•15 years ago
|
||
Comment on attachment 444289 [details] [diff] [review]
Fix?
Exactly like so!
sr=smorgan
Attachment #444289 -
Flags: superreview?(stuart.morgan+bugzilla) → superreview+
| Assignee | ||
Comment 7•15 years ago
|
||
http://hg.mozilla.org/camino/rev/3b275ed2bae0 and cvs trunk.
At least we caught it before it was widely available (have I mentioned how much I love the objc_msgSend() selector info in Mac OS X crash logs? I don't suppose Chromium is interested enough in http://code.google.com/p/google-breakpad/issues/detail?id=332 to task someone fix it? ;) ).
Assignee: nobody → alqahira
Blocks: 548476
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•