Bug 563285 - AutoCompleteTextField needs to call cancelSearch in its dealloc to prevent crashes [@ objc_msgSend | __CFRunLoopRun ] related to searchResultsAvailable. r/sr=smorgan